--- a/styles/style.css
+++ b/styles/style.css
@@ -17,9 +17,9 @@ html {
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
-  align-items: end;
+  align-items: center;
   max-width: 1140px;
-  max-height: 534px;
+  min-height: 534px;
 }
 
 h1,
@@ -100,7 +100,7 @@ ol {
   display: flex;
   flex-direction: column;
   height: 298px;
-  overflow: auto;
+  overflow-y: auto;
   gap: 30px;
   position: relative;
 }
@@ -133,17 +133,18 @@ ol {
   max-width: 196px;
 }
 
-.content__video-card-description{
-  line-clamp:1;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.content__video-card-description {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
   overflow: hidden;
 }
 
 .search-form__fieldset-title {
-  font-size: 19px;
+  font-size: 18px;
   font-weight: 400;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   line-height: 100%;
   margin-bottom: 5px;
 }
@@ -151,18 +152,19 @@ ol {
 .title{
   font-size: 75px;
   line-height: 94%;
-  font-family: "Oswald";
+  font-family: "Oswald", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 22px;
 }
 
-span.content__accent {
+.content__accent {
   font-size: 75px;
   color: #545050;
 }
 
 .content__video-card-title {
+  font-family: "Oswald", sans-serif;
   font-size: 30px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -173,7 +175,9 @@ span.content__accent {
 .content__card-link {
   color: white;
   text-decoration: none;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
+  display: block;
+  cursor: pointer;
 }
 
 .search-form__label {
@@ -199,13 +203,14 @@ span.content__accent {
   border: 0;
   border-bottom: 1px solid #fff;
   border-top: 1px solid #fff;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   --webkit-appearance: none;
   --moz-appearance: none;
   appearance: none;
   cursor: pointer;
   width: 225px;
+  color: #fff
 }
 
 .search-form__textfield:focus {
@@ -228,6 +233,10 @@ span.content__accent {
   cursor: pointer;
 }
 
+.search-form__label{
+  cursor: pointer;
+}
+
 .search-form__label:hover .search-form__label-text {
   text-decoration: underline;
 }
@@ -247,7 +256,7 @@ span.content__accent {
 
 .button {
   border: 1px solid #fff;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: transparent;
   color: white;
@@ -279,11 +288,6 @@ span.content__accent {
 .button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 1px;
-}
-
-.content__card-link {
-  display: block;
-  cursor: pointer;
 }
 
 .content__card-link:active {
